--- a/cleandata.html
+++ b/cleandata.html
@@ -658,8 +658,8 @@ filterPA &lt;- filterPA |&gt;
     )
   )
 
-save(filterPA, file = &quot;filterPA.RData&quot;)</code></pre>
-<pre class="r"><code>PACounty&lt;- read_csv(&quot;PA-city-county.csv&quot;)</code></pre>
+save(filterPA, file = &quot;data/filterPA.RData&quot;)</code></pre>
+<pre class="r"><code>PACounty &lt;- read_csv(&quot;data/PA-city-county.csv&quot;)</code></pre>
 <pre><code>## Rows: 227 Columns: 2
 ## ── Column specification ────────────────────────────────────────────────────────
 ## Delimiter: &quot;,&quot;
@@ -680,7 +680,7 @@ mergedPA &lt;- mergedPA %&gt;%
     )
   )
 
-save(mergedPA, file = &quot;mergedPA.RData&quot;)</code></pre>
+save(mergedPA, file = &quot;data/mergedPA.RData&quot;)</code></pre>
 
 
 
