--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Fantastic Eats and Where to Find Them: PA Version</title>
+<title>Fantastic Eats and Where to Find Them: Southeastern PA Version</title>
 
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -341,8 +341,8 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Fantastic Eats and Where to Find Them: PA
-Version</h1>
+<h1 class="title toc-ignore">Fantastic Eats and Where to Find Them:
+Southeastern PA Version</h1>
 
 </div>
 
@@ -358,7 +358,9 @@ stay in the same place for a long time or just move in like us. When
 people do not know where to eat, rating apps such as yelp would be a key
 resource for people to use. However, it led to an interesting question
 to us: what factors could correlate with rates or stars.</p>
-<hr />
+</div>
+<div id="also-my-best-friend" class="section level2">
+<h2>Also my best friend</h2>
 </div>
 <div id="project-overview" class="section level2">
 <h2>Project Overview</h2>
