--- a/cleandata.html
+++ b/cleandata.html
@@ -460,7 +460,7 @@ print(PAhour)</code></pre>
 ## #   Wednesday_hours &lt;dbl&gt;, Thursday_hours &lt;dbl&gt;, Friday_hours &lt;dbl&gt;,
 ## #   Saturday_hours &lt;dbl&gt;, Sunday_hours &lt;dbl&gt;, Total_hours &lt;dbl&gt;,
 ## #   Weekday_hours &lt;dbl&gt;, Weekend_hours &lt;dbl&gt;</code></pre>
-<pre class="r"><code>save(mergedPA, file = &quot;data/PAhour.RData&quot;)</code></pre>
+<pre class="r"><code>save(PAhour, file = &quot;data/PAhour.RData&quot;)</code></pre>
 
 
 
