--- a/cleandata.html
+++ b/cleandata.html
@@ -250,10 +250,13 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="Proposal.html">About</a>
+  <a href="Report.html">About</a>
 </li>
 <li>
   <a href="Regional.html">Regional Analyze</a>
+</li>
+<li>
+  <a href="Stars.html">Rating Analyze</a>
 </li>
 <li>
   <a href="https://github.com/ShiyingWu-Angel/P8105_final_Project">
