--- a/Report.html
+++ b/Report.html
@@ -375,11 +375,14 @@ of shops and restaurants. Yelp provides detailed <code>58</code>
 variables on businesses, including restaurants, their locations,
 ratings, reviews, and various attributes like dog allows and price
 range. While the dataset does not include New York data, it provides
-comprehensive coverage of other regions, including PA. ###
-<strong>Scraping Method</strong> Initially, we planned to use the Yelp
-Fusion API to retrieve data, as it allows access to Yelp’s business
-information programmatically. However, the detailed datasets and larger
-limits we required were cost-prohibitive. Instead, we used the <a
+comprehensive coverage of other regions, including PA.</p>
+</div>
+<div id="scraping-method" class="section level3">
+<h3><strong>Scraping Method</strong></h3>
+<p>Initially, we planned to use the Yelp Fusion API to retrieve data, as
+it allows access to Yelp’s business information programmatically.
+However, the detailed datasets and larger limits we required were
+cost-prohibitive. Instead, we used the <a
 href="https://www.yelp.com/dataset">Yelp’s Open Dataset</a>. While this
 dataset did not include New York data, we decided to focus on
 Southeastern Pennsylvania, a region with a large number of observations
