Update by Yutong

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Fantastic Eats and Where to Find Them: Southeastern PA Version</title>
 
-<script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
@@ -337,6 +337,9 @@ div.tocify {
   <a href="Stars.html">Rating Analyze</a>
 </li>
 <li>
+  <a href="https://yt4617.shinyapps.io/shiny_dashboard_template/">Get your customized restaurant</a>
+</li>
+<li>
   <a href="https://github.com/ShiyingWu-Angel/P8105_final_Project">
     <span class="fa fa-github fa-lg"></span>
      
@@ -366,17 +369,59 @@ Southeastern PA Version</h1>
 
 
 <hr />
+<div id="where-to-find-fantastic-eats" class="section level2">
+<h2>Where to find fantastic eats?</h2>
 <p><img src="picture/yelp-top-100-us-restaurants.jpeg" /> Photo from: <a
-href="https://www.yelp.com/article/top-100-us-restaurants-2024/"
-class="uri">https://www.yelp.com/article/top-100-us-restaurants-2024/</a></p>
+href="https://www.yelp.com/article/top-100-us-restaurants-2024/">Yelp</a></p>
 <p>It is hard for anyone to find a good restaurant, no matter if they
 stay in the same place for a long time or just move in like us. When
 people do not know where to eat, rating apps such as yelp would be a key
 resource for people to use. However, it led to an interesting question
 to us: what factors could correlate with rates or stars.</p>
+</div>
+<div id="restaurants-distribution" class="section level2">
+<h2>Restaurants Distribution</h2>
+<p>Upon data analysis, we condensed the restaurants information across
+different locations and categories in the Pennsylvania from the
+<strong>Yelp data</strong> (<a href="Report.html">data source</a>),
+analyzing the distribution of restaurants in the Pennsylvania.</p>
+<p>Read <a href="Regional.html">Regional Analyzation</a> here.</p>
+</div>
+<div id="rating-associated-factors" class="section level2">
+<h2>Rating-Associated Factors</h2>
+<p>We made an in-depth <a href="Stars.html">Exploratory Analysis</a>
+about restaurant rating, and at last we identified the indicators of
+rating and constructed the model for predicting the restaurants
+ratings.</p>
+</div>
+<div id="match-for-special-needs" class="section level2">
+<h2>Match for Special Needs</h2>
+<p>Try our <a
+href="https://yt4617.shinyapps.io/shiny_dashboard_template/">App</a> to
+get your ideal restaurant in PA !</p>
+</div>
+<div id="report" class="section level2">
+<h2>Report</h2>
+<p>Browse our <a href="Report.html">report</a> for key insights from our
+analysis!</p>
+</div>
+<div id="creators" class="section level2">
+<h2>Creators</h2>
+<ul>
+<li>Yutong Chen (yc4617)<br />
+</li>
+<li>Tingcheng Pan (tp2859)<br />
+</li>
+<li>Shiying Wu (sw3455)<br />
+</li>
+<li>Yifan Xu (yx2857)</li>
+</ul>
 <hr />
+</div>
 <div id="project-overview" class="section level2">
 <h2>Project Overview</h2>
+<p>Click on the video below to learn more about the features of this
+site and enjoy a summary of our key highlights!</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
 </iframe>
 <hr />
@@ -425,12 +470,6 @@ Philadelphia.</p>
 <div id="looking-for-fancy-places-to-eat-for-date"
 class="section level3">
 <h3>Looking for fancy places to eat for date?</h3>
-</div>
-<div id="looking-for-a-match-for-special-needs" class="section level3">
-<h3>Looking for a match for special needs?</h3>
-<p><strong>Try our <a
-href="https://github.com/ShiyingWu-Angel/P8105_final_Project">Shiny
-App</a></strong></p>
 <p><img src="picture/looking.png" /></p>
 <hr />
 <p>For more informartion about yelp.data and some nice restaurant, check
