--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.tocify {
   <a href="Stars.html">Rating Analyze</a>
 </li>
 <li>
-  <a href="Model-build.html">Model Build</a>
+  <a href="Model-building.html">Model Build</a>
 </li>
 <li>
   <a href="https://yt4617.shinyapps.io/shiny_dashboard_template/">Get your customized restaurant</a>
