added model build button

--- a/Regional.html
+++ b/Regional.html
@@ -345,6 +345,9 @@ div.tocify {
   <a href="Stars.html">Rating Analyze</a>
 </li>
 <li>
+  <a href="Model-building.html">Model Build</a>
+</li>
+<li>
   <a href="https://yt4617.shinyapps.io/shiny_dashboard_template/">Get your customized restaurant</a>
 </li>
 <li>
